# c_cxx_cmake_template

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt
cmake/modules/: WN.cmake  WNTemplate-config.cmake.in  WNTemplate.cmake
include/WNTemplate/Basic/: Version.h  Version.inc.in  test.hpp
lib/Basic/: CMakeLists.txt  Version.c  test.cpp
test/: CMakeLists.txt  test.cpp
tools/driver/: CMakeLists.txt  Driver.cpp
